@@ -12,12 +12,15 @@ partman-partitioning (54) UNRELEASED; urgency=low
     Part of this change was originally suggested by Jérémy Bobbio.
   * disk-label.sh: allow not to prompt for new disk label if default is valid
     (for use during guided partitioning).
+  * disk-label.sh: remove existing LVM data from the device before creating a
+    new disk label; this is now also done if a new disk label is created
+    during manual partitioning. Requires partman-lvm (>= 57).
 
   [ Colin Watson ]
   * Quote $(FS_DEPENDS) in dh_gencontrol arguments to avoid gotcha when
     adding extra items to it.
 
- -- Frans Pop <fjp@debian.org>  Sat, 08 Dec 2007 13:47:07 +0100
+ -- Frans Pop <fjp@debian.org>  Sat, 08 Dec 2007 20:04:52 +0100
 
 partman-partitioning (53) unstable; urgency=low
 
